// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing creation of the Sizing object with default 1`] = `
Object {
  "inherit": Object {
    "font": Object {
      "lineHeight": "24px",
      "size": 16,
      "sizepx": "16px",
      "sizerem": "1rem",
    },
    "type": "inherit",
  },
  "large": Object {
    "font": Object {
      "lineHeight": "36px",
      "size": 24,
      "sizepx": "24px",
      "sizerem": "1.5rem",
    },
    "type": "large",
  },
  "medium": Object {
    "font": Object {
      "lineHeight": "24px",
      "size": 16,
      "sizepx": "16px",
      "sizerem": "1rem",
    },
    "type": "medium",
  },
  "normal": Object {
    "font": Object {
      "lineHeight": "24px",
      "size": 16,
      "sizepx": "16px",
      "sizerem": "1rem",
    },
    "type": "normal",
  },
  "small": Object {
    "font": Object {
      "lineHeight": "18px",
      "size": 12,
      "sizepx": "12px",
      "sizerem": "0.75rem",
    },
    "type": "small",
  },
  "xlarge": Object {
    "font": Object {
      "lineHeight": "48px",
      "size": 32,
      "sizepx": "32px",
      "sizerem": "2rem",
    },
    "type": "xlarge",
  },
  "xsmall": Object {
    "font": Object {
      "lineHeight": "12px",
      "size": 8,
      "sizepx": "8px",
      "sizerem": "0.5rem",
    },
    "type": "xsmall",
  },
  "xxlarge": Object {
    "font": Object {
      "lineHeight": "72px",
      "size": 48,
      "sizepx": "48px",
      "sizerem": "3rem",
    },
    "type": "xxlarge",
  },
  "xxsmall": Object {
    "font": Object {
      "lineHeight": "9px",
      "size": 6,
      "sizepx": "6px",
      "sizerem": "0.375rem",
    },
    "type": "xxsmall",
  },
}
`;

exports[`Testing creation of the Sizing object with size 24 1`] = `
Object {
  "inherit": Object {
    "font": Object {
      "lineHeight": "36px",
      "size": 24,
      "sizepx": "24px",
      "sizerem": "1rem",
    },
    "type": "inherit",
  },
  "large": Object {
    "font": Object {
      "lineHeight": "48px",
      "size": 32,
      "sizepx": "32px",
      "sizerem": "1.3333333333333333rem",
    },
    "type": "large",
  },
  "medium": Object {
    "font": Object {
      "lineHeight": "36px",
      "size": 24,
      "sizepx": "24px",
      "sizerem": "1rem",
    },
    "type": "medium",
  },
  "normal": Object {
    "font": Object {
      "lineHeight": "36px",
      "size": 24,
      "sizepx": "24px",
      "sizerem": "1rem",
    },
    "type": "normal",
  },
  "small": Object {
    "font": Object {
      "lineHeight": "30px",
      "size": 20,
      "sizepx": "20px",
      "sizerem": "0.8333333333333334rem",
    },
    "type": "small",
  },
  "xlarge": Object {
    "font": Object {
      "lineHeight": "60px",
      "size": 40,
      "sizepx": "40px",
      "sizerem": "1.6666666666666667rem",
    },
    "type": "xlarge",
  },
  "xsmall": Object {
    "font": Object {
      "lineHeight": "24px",
      "size": 16,
      "sizepx": "16px",
      "sizerem": "0.6666666666666666rem",
    },
    "type": "xsmall",
  },
  "xxlarge": Object {
    "font": Object {
      "lineHeight": "84px",
      "size": 56,
      "sizepx": "56px",
      "sizerem": "2.3333333333333335rem",
    },
    "type": "xxlarge",
  },
  "xxsmall": Object {
    "font": Object {
      "lineHeight": "21px",
      "size": 14,
      "sizepx": "14px",
      "sizerem": "0.5833333333333334rem",
    },
    "type": "xxsmall",
  },
}
`;
